# cloudexchange

./: .gitignore  EXCHANGE_FEATURE_AUDIT.md  GOLDCHAIN_L1_AUDIT_REPORT.md  PROJECT_COMPLETION_REPORT.md  README.md  hardhat.config.ts  package-lock.json  package.json
audit-service/: Cargo.toml
audit-service/src/: main.rs
backend/: server.ts
backup-service/: Cargo.toml
backup-service/src/: restore_drills.rs
cache/: solidity-files-cache.json
contracts/: CloudExchangeEscrow.sol  MockUSDT.sol
database/: schema.sql
devops/k8s/: exchange-deployments.yaml
devops/terraform/: main.tf
frontend/: next.config.ts  package-lock.json  package.json
gateways/fix-gateway/: Cargo.toml
goldchain-l1/: Cargo.toml
goldchain-l1/crates/goldchain-core/: Cargo.toml
goldchain-l1/crates/goldchain-core/src/: account.rs  block.rs  da.rs  economics.rs  error.rs  genesis.rs  governance.rs  lib.rs  light_client.rs  mempool.rs  telemetry.rs  transaction.rs
goldchain-l1/crates/goldchain-crypto/: Cargo.toml
goldchain-l1/crates/goldchain-crypto/src/: address.rs  error.rs  hash.rs  keys.rs  lib.rs  signature.rs
goldchain-l1/crates/goldchain-storage/: Cargo.toml
goldchain-l1/crates/goldchain-storage/src/: db.rs  error.rs  lib.rs
goldchain-l1/target_final_all/: .rustc_info.json
infrastructure/: Cargo.toml
infrastructure/src/: control_plane.rs  main.rs  observability.rs  rate_limiter.rs
ledger-settlement/: Cargo.toml
ledger-settlement/db/migrations/: 001_init_ledger_schema.sql
ledger-settlement/src/: custody.rs  ledger.rs  main.rs  settlement.rs  wallet.rs
market-surveillance/: Cargo.toml
market-surveillance/src/: main.rs
matching-engine/: Cargo.toml
matching-engine/src/: main.rs  orderbook.rs  ring_buffer.rs  shadow.rs
p2p-marketplace/: Cargo.toml
p2p-marketplace/src/: anti_fraud.rs  chat.rs  escrow.rs  main.rs
risk-engine/: Cargo.toml
risk-engine/src/: main.rs  market_surveillance.rs  risk.rs
schema-registry/: Cargo.toml
schema-registry/src/: main.rs
scripts/: deploy.ts
test/: CloudExchangeEscrow.test.ts
typechain-types/: MockUSDT.ts  hardhat.d.ts  index.ts
typechain-types/CloudExchangeEscrow.sol/: AccessControl.ts  CloudExchangeEscrow.ts  index.ts  (+1 more)
(+300 files in other folders)
