[package]
name = "goldchain-core"
version = "0.1.0"
edition = "2021"

[dependencies]
goldchain-crypto = { path = "../goldchain-crypto" }
goldchain-types = { path = "../goldchain-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
