[package]
name = "goldchain-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
goldchain-crypto = { path = "../goldchain-crypto" }
goldchain-types = { path = "../goldchain-types" }
redb = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
borsh = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
